# thrml

active_inference/: .gitignore  .pre-commit-config.yaml  AGENTS.md  QUICK_REFERENCE.md  README.md  SETUP.md  TEST_FIX_SUMMARY.md  pyproject.toml
active_inference/archive/: AGENTS.md  README.md  analyze_seed_42.py  coin_flip_seed_comparison.py  coin_flip_variance_demo.py
active_inference/docs/: .cursorrules  README.md  agents.md  analysis_validation.md  api.md  architecture.md  configuration_summary.md  custom_environments.md  custom_models.md  documentation_completeness_report.md  documentation_summary.md  getting_started.md  hierarchical_models.md  module_agents.md  module_core.md  module_environments.md  module_index.md  module_inference.md  module_models.md  module_utils.md  module_visualization.md  navigation.md  performance.md  planning_algorithms.md  precision_control.md  theory.md  thrml_integration.md  workflows_patterns.md
active_inference/examples/: .cursorrules  00_probabilistic_computing.py  01_all_of_thrml.py  02_spin_models.py  03_precision_control.py  04_mdp_example.py  05_pomdp_example.py  06_coin_flip_inference.py  07_matrix_performance.py  08_signal_processing.py  09_control_theory.py  10_active_inference_fundamentals.py  11_thrml_comprehensive.py  12_statistical_validation_demo.py  13_coin_flip_meta_analysis.py  14_basic_inference.py  15_grid_world_agent.py  AGENTS.md  INDEX.md  README.md  example_utils.py  examples_config.yaml
active_inference/output/: summary.txt
active_inference/output/03_precision_control/20251031_120025/: manifest.json  summary.json
active_inference/output/04_mdp_example/20251031_120037/: manifest.json  summary.json
active_inference/output/05_pomdp_example/20251031_120115/: manifest.json  summary.json
active_inference/output/06_coin_flip_inference/20251031_120145/: manifest.json  summary.json
active_inference/output/07_matrix_performance/20251031_120243/: manifest.json  summary.json
active_inference/output/08_signal_processing/20251031_120258/: manifest.json  summary.json
active_inference/output/09_control_theory/20251031_120353/: manifest.json  summary.json
active_inference/scripts/: AGENTS.md  README.md  check.sh  format.sh  resource_tracker.py  run_all_examples.sh  run_tests.sh  setup.sh  setup_and_test.sh  test_all_examples.sh  validate_examples.py
active_inference/src/: README.md
active_inference/src/active_inference/: __init__.py
active_inference/test_results/: latest
active_inference/test_results/run_20251031_075245/: TEST_SUMMARY.md
active_inference/test_results/run_20251031_084955/: TEST_SUMMARY.md
active_inference/tests/: .cursorrules  AGENTS.md  README.md  __init__.py  conftest.py  test_agents.py  test_core.py  test_environments.py  test_inference.py  test_integration.py  test_thrml_integration.py
examples/: 00_probabilistic_computing.ipynb
(+91 files in other folders)
